# yodelr

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Build.yml
benchmarks/: CMakeLists.txt
example/: main.cpp
examples/: CMakeLists.txt  Main.cpp  example_yodelr.cpp  main.cpp
include/Yodelr/: IYodelr.h  Yodelr.h
include/yodelr/: yodelr.h  yodelr_impl.h
mocks/: YodelrMock.h  mock_yodelr.h
src/: Yodelr.cpp  yodelr_impl.cpp
tests/: CMakeLists.txt  Main.cpp  YodelrTest.cpp  main.cpp  test_yodelr.cpp
